--- a/LibraryService/src/main/resources/application.properties
+++ b/LibraryService/src/main/resources/application.properties
@@ -1,1 +1,5 @@
-
+spring.datasource.url=jdbc:mariadb://localhost:3306/library
+spring.datasource.username=root
+spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.database-platform=org.hibernate.dialect.MariaDBDialect
