--- a/FileService/src/main/resources/application.properties
+++ b/FileService/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mariadb://localhost:3306/springboot
+spring.datasource.url=jdbc:mariadb://192.168.2.152:3306/fileservice
 spring.datasource.username=root
+spring.datasource.password=Nummer123@
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
