--- a/LibraryService/src/main/resources/application.properties
+++ b/LibraryService/src/main/resources/application.properties
@@ -1,5 +1,7 @@
-spring.datasource.url=jdbc:mariadb://localhost:3306/library
+spring.datasource.url=jdbc:mariadb://192.168.2.152:3306/libraryservice
 spring.datasource.username=root
+spring.datasource.password=Nummer123@
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 #spring.jpa.database-platform=org.hibernate.dialect.MariaDBDialect
+server.port=8081
