--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,6 +3,8 @@ on:
   push:
     paths:
       - 'FileService/**'
+    branches:
+      - 'master'
 
 jobs:
   build:
@@ -15,7 +17,9 @@ jobs:
       - name: Set up JDK 17
         uses: actions/setup-java@v3
         with:
-          java-version: 17
+              java-version: '17'
+              distribution: 'corretto'
+              cache: maven
       - name: Cache SonarQube packages
         uses: actions/cache@v1
         with:
