added modules to pom

--- a/pom.xml
+++ b/pom.xml
@@ -84,4 +84,9 @@
         </plugins>
     </build>
 
+    <modules>
+        <module>FileService</module>
+        <module>LibraryService</module>
+    </modules>
+
 </project>
